// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render on click and with icon 1`] = `
<div
  className="relative font-ibm w-fit pt-2 text-gray-50 group"
>
  <svg
    aria-hidden="true"
    className="w-5 cursor-pointer"
    fill="none"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="hidden bg-white dark:bg-gray-130 text-gray-80 dark:text-gray-10 text-sm text-center p-2 absolute min-w-[112px] min-h-[112px] flex-col justify-evenly items-center rounded-lg shadow-[0_10px_15px_-3px_rgba(0,0,0,0.1)] after:absolute after:content:none after:border-[10px] after:border-transparent bottom-8 -left-11 -ml-0.5 after:left-[40.5%] after:-bottom-[8px] after:border-b-0 after:border-t-white dark:after:border-t-gray-130"
  />
</div>
`;

exports[`should render with hover and text 1`] = `
<div
  className="relative font-ibm w-fit pt-2 text-gray-50 group hover:text-gray-70"
>
  <div
    className="cursor-pointer w-max"
    onClick={[Function]}
  >
    Click here
  </div>
  <div
    className="hidden group-hover:flex bg-white dark:bg-gray-130 text-gray-80 dark:text-gray-10 text-sm text-center p-2 absolute min-w-[112px] min-h-[112px] flex-col justify-evenly items-center rounded-lg shadow-[0_10px_15px_-3px_rgba(0,0,0,0.1)] after:absolute after:content:none after:border-[10px] after:border-transparent bottom-8 -left-11 -ml-0.5 after:left-[40.5%] after:-bottom-[8px] after:border-b-0 after:border-t-white dark:after:border-t-gray-130"
  />
</div>
`;

exports[`should render with info icon 1`] = `
<div
  className="relative font-ibm w-fit pt-2 text-gray-50 group hover:text-gray-70"
>
  <svg
    aria-hidden="true"
    className="w-5 cursor-pointer"
    fill="none"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="hidden group-hover:flex bg-white dark:bg-gray-130 text-gray-80 dark:text-gray-10 text-sm text-center p-2 absolute min-w-[112px] min-h-[112px] flex-col justify-evenly items-center rounded-lg shadow-[0_10px_15px_-3px_rgba(0,0,0,0.1)] after:absolute after:content:none after:border-[10px] after:border-transparent bottom-8 -left-11 -ml-0.5 after:left-[40.5%] after:-bottom-[8px] after:border-b-0 after:border-t-white dark:after:border-t-gray-130"
  />
</div>
`;

exports[`should render with info icon and under the icon 1`] = `
<div
  className="relative font-ibm w-fit pt-2 text-gray-50 group hover:text-gray-70"
>
  <svg
    aria-hidden="true"
    className="w-5 cursor-pointer"
    fill="none"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
  <div
    className="hidden group-hover:flex bg-white dark:bg-gray-130 text-gray-80 dark:text-gray-10 text-sm text-center p-2 absolute min-w-[112px] min-h-[112px] flex-col justify-evenly items-center rounded-lg shadow-[0_10px_15px_-3px_rgba(0,0,0,0.1)] after:absolute after:content:none after:border-[10px] after:border-transparent top-8 -left-11 -ml-0.5 after:left-[41%] after:-top-4 after:border-b-white after:border-t-8 dark:after:border-b-gray-130"
  />
</div>
`;

exports[`should render with text instead of icon 1`] = `
<div
  className="relative font-ibm w-fit pt-2 text-gray-50 group hover:text-gray-70"
>
  <div
    className="cursor-pointer w-max"
    onClick={[Function]}
  >
    Click here
  </div>
  <div
    className="hidden group-hover:flex bg-white dark:bg-gray-130 text-gray-80 dark:text-gray-10 text-sm text-center p-2 absolute min-w-[112px] min-h-[112px] flex-col justify-evenly items-center rounded-lg shadow-[0_10px_15px_-3px_rgba(0,0,0,0.1)] after:absolute after:content:none after:border-[10px] after:border-transparent bottom-8 -left-11 -ml-0.5 after:left-[40.5%] after:-bottom-[8px] after:border-b-0 after:border-t-white dark:after:border-t-gray-130"
  />
</div>
`;
